# python-openobserve

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  README.md  REUSE.toml  SECURITY.md  config.json  example.ipynb  mkdocs.yml  pyproject.toml  renovate.json  requirements-ansible.txt  requirements-ansible.yml  requirements-build.txt  requirements-dev.txt  requirements-guarddog-ignore.txt  requirements.txt
.clusterfuzzlite/: Dockerfile  build.sh  openobserve_fuzzer.py  openobserve_fuzzers.py  project.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: clusterfuzzlite.yml  codeql.yml  guarddog.yml  main.yml  ossf-scorecard.yml  osv-scanner.yml  precommit.yml  pytest-offline.yml  pytest-online.yml  pytest-poetry.yml  pytest-uv.yml  pytest.yml  python-publish-testpypi.yml  python-publish.yml
docs/: code.md  example.ipynb  index.md  requirements.in  resources.md  tests.md  usage.md
python_openobserve/: openobserve.py
tests/: test_fireducks_openobserve_api.py  test_openobserve_api.py  test_openobserve_api_alert.py  test_openobserve_api_memray.py  test_openobserve_api_offline.py  test_polars_openobserve_api.py
