# SPDX-FileCopyrightText: 2025 The python_openobserve authors
# SPDX-License-Identifier: GPL-3.0-or-later
[tool.poetry]
name = "python-openobserve"
version = "0.4.1"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
license = "GNUv3"
readme = "README.md"
homepage = "https://github.com/JustinGuese/python-openobserve"
repository = "https://github.com/JustinGuese/python-openobserve"
keywords = ["openobserve", "elasticsearch", "logging", "unstructured data"]
packages = [{include = "python_openobserve"}]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">3.9"
requests = "~=2.32.4"
pydantic = "~=2.10"
sqlglot = "~=26.4.0"
pandas = { version = ">2.2", optional = true }
polars = { version = "==1.30.0", optional = true }
fireducks = { version = "==1.2.8", optional = true }

[tool.poetry.dev-dependencies]
jmespath = "1.0.1"
pytest = "8.3.5"
memray = "1.17.2"
pytest-memray = "1.7.0"
mypy = "1.15.0"
mypy-extensions = "1.0.0"
python-dotenv = "1.0.1"

[tool.poetry.extras]
pandas = [
    "pandas"
]
polar = [
    "polars"
]
fireducks = [
    "fireducks"
]

[tool.optional-dependencies]
ci = [
    "jmespath==1.0.1",
    "memray==1.17.2",
    "pytest-memray==1.7.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "pandas==2.2.3",
    "pandas-stubs==2.2.2.240807",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "types-jmespath==1.0.2.20240106",
    "types-requests==2.32.0.20241016",
    "guarddog==2.6.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.15",
    "mkdocstrings==0.29.1",
]
tests = ["pytest", "jmespath", "python-dotenv"]
pandas = [
    "pandas>2.2"
]
polar = [
    "polars==1.30.0"
]
fireducks = [
    "fireducks==1.2.8"
]
all = ['pandas', 'tests', 'ci', 'docs', 'polars', 'fireducks']

[tool.poetry.scripts]
python_openobserve = 'python_openobserve:openobserve'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B101"]
